# parallel_computing

./: .clang-format  .gitignore  CMakeLists.txt
scripts/: install_ICD_loader_runtime.sh  install_openCL_runtimes.sh
src/: CMakeLists.txt
src/OpenCL_bin/: CMakeLists.txt
src/OpenCL_bin/simple_OpenCL/: CMakeLists.txt  Makefile  simple_OpenCL.cpp  utility.cpp  utility.h
